--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -40,35 +40,35 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="firstName">First Name</label>
-                  <input type="text" class="form-control" name= "firstname" id="firstName" placeholder="First Name">
+                  <input type="text" class="form-control" name="firstname" value="{{resObj.firstname}}" id="firstName" placeholder="First Name">
                 </div>
                 <div class="form-group col-md-6">
                   <label for="lastName">Last Name</label>
-                  <input type="text" class="form-control" name="lastname" id="lastName" placeholder="Last Name">
+                  <input type="text" class="form-control" name="lastname" value="{{resObj.lastname}}" id="lastName" placeholder="Last Name">
                 </div>
               </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" name="email" id="inputEmail4" placeholder="Email">
+                <input type="text" class="form-control" name="email" value="{{resObj.email}}" id="inputEmail4" placeholder="Email">
               </div>
               <div class="form-group col-md-6">
                 <label for="inputPassword4">Password</label>
-                <input type="password" class="form-control" name="password" id="inputPassword4" placeholder="Password">
+                <input type="password" class="form-control" name="password" value="{{resObj.password}}" id="inputPassword4" placeholder="Password">
               </div>
             </div>
             <div class="form-group">
               <label for="inputAddress">Address</label>
-              <input type="text" class="form-control" name="address" id="inputAddress" placeholder="111 First St">
+              <input type="text" class="form-control" name="address" value="{{resObj.address}}" id="inputAddress" placeholder="111 First St">
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputCity">City</label>
-                <input type="text" class="form-control" id="inputCity">
+                <input type="text" class="form-control" name="city" value="{{resObj.city}}" id="inputCity">
               </div>
               <div class="form-group col-md-4">
                 <label for="inputState">Province</label>
-                <select id="inputState" class="form-control">
+                <select id="inputState" class="form-control" name="province" value="{{resObj.province}}">
                   <option selected>Choose...</option>
                   <option value="AB">Alberta</option>
                   <option value="BC">British Columbia</option>
@@ -87,7 +87,7 @@
               </div>
               <div class="form-group col-md-2">
                 <label for="inputZip">Postal Code</label>
-                <input type="text" class="form-control" id="inputZip">
+                <input type="text" class="form-control" name="zip" value="{{resObj.zip}}" id="inputZip">
               </div>
             </div>
             <div class="form-group">
