--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -1,4 +1,9 @@
-
+<!--//Name:Han Lu
+//Email : hlu48@myseneca.ca
+//ID : 123237216 
+//heroku link
+//https://han216a3.herokuapp.com/
+-->
 <!doctype html>
 <html lang="en">
   <head>
