--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -3,6 +3,8 @@
 //ID : 123237216 
 //heroku link
 //https://han216a3.herokuapp.com/
+//github link
+//https://github.com/hlu48/Web322Assignment3.git
 -->
 <!doctype html>
 <html lang="en">
